tests/typing/bad/testfile-arith-1.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
int main() { bool *p; p+p; }
